html work, add driver and team

--- a/f1project/templates/displayFastestLapTimes.html
+++ b/f1project/templates/displayFastestLapTimes.html
@@ -1,7 +1,9 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="{% static 'styles.css' %}">
     <title>Fastest lap times</title>
 </head>
 <body>
@@ -13,7 +15,7 @@
         <th>Driver's number</th>
         <th>Driver's name</th>
         <th>Driver's surname</th>
-        <th>Driver's team/th>
+        <th>Driver's team</th>
         <th>Driver's lap time</th>
     </tr>
     </thead>
