--- a/f1project/templates/displayRaceResults.html
+++ b/f1project/templates/displayRaceResults.html
@@ -1,7 +1,9 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="{% static 'styles.css' %}">
     <title>Race results</title>
 </head>
 <body>
@@ -13,7 +15,7 @@
         <th>Winner's number</th>
         <th>Winner's name</th>
         <th>Winner's surname</th>
-        <th>Winner's team/th>
+        <th>Winner's team</th>
         <th>Laps number</th>
         <th>Race time</th>
     </tr>
