--- a/f1project/static/styles.css
+++ b/f1project/static/styles.css
@@ -1,9 +1,11 @@
 body {
     background-color: #1a1a1a;
     font-family: 'Arial', sans-serif;
+    color: white;
     padding: 40px;
     margin: 0;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     min-height: 100vh;
@@ -43,12 +45,74 @@ button::after {
 
 button:hover::after {
     left: 120%;
+    transition: all 550ms cubic-bezier(0.19, 1, 0.22, 1);
 }
 
 table {
-    border: 2px #e10600;
+    border: 2px solid #e10600;
+    border-collapse: collapse;
+    border-radius: 5px;
+    width: 80%;
 }
 
-th, td {
-    padding: 10px;
+table th {
+    padding: 15px;
+    background-color: #e10600;
+    color: white;
+    text-align: left;
+    font-weight: bold;
+    font-size: 15px;
 }
+
+table td {
+    padding: 15px;
+    background-color: #2a2a2a;
+    color: white;
+    border-bottom: 1px solid #444;
+    font-size: 15px;
+}
+
+caption {
+    font-size: 30px;
+    padding: 20px;
+    font-family: 'Arial', sans-serif;
+    background-color: #e10600;
+    color: white;
+}
+
+h1 {
+    text-align: center;
+}
+
+h2 {
+    text-align: center;
+    background-color: #8a110e;
+    color: white;
+    padding: 15px;
+    border-radius: 5px;
+}
+
+form {
+    align-items: center;
+    background-color: #8a110e;
+    padding: 20px;
+    border-radius: 5px;
+    color: #1a1a1a;
+    margin: auto;
+}
+
+input[type=submit] {
+    background-color: #e10600;
+    color: white;
+    font-size: 16px;
+    padding: 15px 30px;
+    margin: auto;
+    border: 1px solid #ff1e00;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+row1, row2, row3 {
+    margin-bottom: 15px;
+}
+
