--- a/f1project/templates/main.html
+++ b/f1project/templates/main.html
@@ -26,7 +26,7 @@
         </a>
     </div>
     <div class="row2">
-        <h2>Modifiying tables</h2>
+        <h2>Modifying tables</h2>
         <a href="{% url 'adddriver' %}">
             <button>Add driver</button>
         </a>
@@ -36,6 +36,9 @@
     </div>
     <div class="row3">
         <h2>Display specific data</h2>
+        <a href="{% url 'driversfastestlap' %"}>
+            <button>Display amount of times driver had fastest lap time</button>
+        </a>
     </div>
 </body>
 </html>
