--- a/f1project/static/styles.css
+++ b/f1project/static/styles.css
@@ -49,7 +49,7 @@ button:hover::after {
 }
 
 table {
-    border: 2px solid #e10600;
+    border: 2px solid #8a110e;
     border-collapse: collapse;
     border-radius: 5px;
     width: 80%;
@@ -62,6 +62,7 @@ table th {
     text-align: left;
     font-weight: bold;
     font-size: 15px;
+    border: 1px solid #8a110e;
 }
 
 table td {
@@ -70,13 +71,14 @@ table td {
     color: white;
     border-bottom: 1px solid #444;
     font-size: 15px;
+    border: 1px solid #8a110e;
 }
 
 caption {
     font-size: 30px;
     padding: 20px;
     font-family: 'Arial', sans-serif;
-    background-color: #e10600;
+    background-color: #8a110e;
     color: white;
 }
 
@@ -97,7 +99,7 @@ form {
     background-color: #8a110e;
     padding: 20px;
     border-radius: 5px;
-    color: #1a1a1a;
+    color: white;
     margin: auto;
 }
 
