--- a/f1project/templates/main.html
+++ b/f1project/templates/main.html
@@ -36,8 +36,8 @@
     </div>
     <div class="row3">
         <h2>Display specific data</h2>
-        <a href="{% url 'driversfastestlap' %"}>
-            <button>Display amount of times driver had fastest lap time</button>
+        <a href="{% url 'driversfastestlap' %}">
+            <button>Display amount of times driver had the fastest lap time</button>
         </a>
     </div>
 </body>
