win amount query completed

--- a/f1project/templates/main.html
+++ b/f1project/templates/main.html
@@ -39,6 +39,9 @@
         <a href="{% url 'driversfastestlap' %}">
             <button>Display amount of times driver had the fastest lap time</button>
         </a>
+        <a href="{% url 'driverwins' %}">
+            <button>Display amount of times driver won a race</button>
+        </a>
     </div>
 </body>
 </html>
