--- a/f1project/templates/main.html
+++ b/f1project/templates/main.html
@@ -7,6 +7,7 @@
     <title>Title</title>
 </head>
 <body>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/33/F1.svg/2560px-F1.svg.png" height="160" width="640"/>
     <div class="row1">
         <h2>Tables</h2>
         <a href="{% url 'drivers' %}">
