--- a/f1project/templates/displayDrivers.html
+++ b/f1project/templates/displayDrivers.html
@@ -24,7 +24,7 @@
         <td>{{record.number}}</td>
         <td>{{record.name}}</td>
         <td>{{record.surname}}</td>
-        <td>{{record.team}}</td>
+        <td>{{record.team.team}}</td>
         <td>{{record.current_points}}</td>
     </tr>
     {% endfor %}
