--- a/f1project/templates/displayFastestLapTimes.html
+++ b/f1project/templates/displayFastestLapTimes.html
@@ -28,7 +28,7 @@
         <td>{{record.driver_number.number}}</td>
         <td>{{record.driver_number.name}}</td>
         <td>{{record.driver_number.surname}}</td>
-        <td>{{record.driver_number.team}}</td>
+        <td>{{record.driver_number.team.team}}</td>
         <td>{{record.lap_time|date:"i:s"}}.{{record.lap_time.microsecond|stringformat:"06d"|slice:"3"}}</td>
     </tr>
     {% endfor %}
