--- a/f1project/templates/displayRaceResults.html
+++ b/f1project/templates/displayRaceResults.html
@@ -29,7 +29,7 @@
         <td>{{record.winner_number.number}}</td>
         <td>{{record.winner_number.name}}</td>
         <td>{{record.winner_number.surname}}</td>
-        <td>{{record.winner_number.team}}</td>
+        <td>{{record.winner_number.team.team}}</td>
         <td>{{record.laps_number}}</td>
         <td>{{record.race_time|date:"h:i:s"}}.{{record.race_time.microsecond|stringformat:"06d"|slice:"3"}}</td>
     </tr>
